--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Slime Game</title>
-  <link rel="stylesheet" href="style.css">
+    <title>Simple Platformer</title>
+    <style>
+        canvas {
+            border: 2px solid black;
+        }
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f0f0f0;
+        }
+    </style>
 </head>
 <body>
-  <div id="gameContainer">
     <canvas id="gameCanvas"></canvas>
-    <div id="scoreDisplay">Score: 0</div>
-    <div id="gameOverScreen" class="hidden">
-      <h1>Game Over!</h1>
-      <p>Final Score: <span id="finalScore">0</span></p>
-      <button id="restartButton">Restart</button>
-    </div>
-  </div>
-  <script src="script.js"></script>
+    <script src="game.js"></script>
 </body>
 </html>
