--- a/index.html
+++ b/index.html
@@ -2,22 +2,12 @@
 <html>
 <head>
     <title>Simple Platformer</title>
-    <style>
-        canvas {
-            border: 2px solid black;
-        }
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f0f0f0;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <canvas id="gameCanvas"></canvas>
+    <div class="game-container">
+        <canvas id="gameCanvas"></canvas>
+    </div>
     <script src="game.js"></script>
 </body>
 </html>
