--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     <div class="game-container hidden" id="gameContainer">
         <canvas id="gameCanvas"></canvas>
     </div>
+    <div id="finishedPopup" class="popup hidden">
+        <h2>Level Completed!</h2>
+        <button id="nextLevelButton">Next Level</button>
+        <button id="mainMenuButton">Main Menu</button>
+    </div>
     <script src="game.js"></script>
 </body>
 </html>
